--- a/app/views/docs/functions-develop.phtml
+++ b/app/views/docs/functions-develop.phtml
@@ -124,13 +124,13 @@ def main(context):
     # If something goes wrong, log an error
     context.error("Hello, Errors!")
 
-    # The `ctx.req` object contains the request data
+    # The `context.req` object contains the request data
     if context.req.method == "GET":
         # Send a response with the res object helpers
-        # `ctx.res.send()` dispatches a string back to the client
+        # `context.res.send()` dispatches a string back to the client
         return context.res.send("Hello, World!")
 
-    # `ctx.res.json()` is a handy helper for sending JSON
+    # `context.res.json()` is a handy helper for sending JSON
     return context.res.json(
         {
             "motto": "Build Fast. Scale Big. All in One Place.",
@@ -163,14 +163,14 @@ def main(context)
   # If something goes wrong, log an error
   context.error("Hello, Errors!")
 
-  # The `ctx.req` object contains the request data
+  # The `context.req` object contains the request data
   if (context.req.method == "GET")
     # Send a response with the res object helpers
-    # `ctx.res.send()` dispatches a string back to the client
+    # `context.res.send()` dispatches a string back to the client
     return context.res.send("Hello, World!")
   end
 
-  # `ctx.res.json()` is a handy helper for sending JSON
+  # `context.res.json()` is a handy helper for sending JSON
   return context.res.json({
     "motto": "Build Fast. Scale Big. All in One Place.",
     "learn": "https://appwrite.io/docs",
@@ -765,7 +765,7 @@ public class Main {
 <h4><a href="#headers" id="headers">Headers</a></h3>
     <p>
         Appwrite Functions will always receive a set of headers that provide meta data about the function execution.
-        These are provided along side any custom headers sent to the function.
+        These are provided alongside any custom headers sent to the function.
     </p>
 
     <table cellspacing="0" cellpadding="0" border="0" class="full margin-bottom-large">
